--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-  "name": "svelte-typescript-esbuild-tailwind-template",
+  "name": "uibuilder-svelte-esbuild-tailwind-live-template",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"node esbuild.mjs\" \"npx tailwindcss -i ./src/tailwind.css -o ./public/build/bundle.css --watch\"",
-    "live": "node esbuild.mjs",
-    "lint": "svelte-check --tsconfig ./tsconfig.json && prettier --plugin-search-dir=. --write .",
-    "build": "node esbuild prod && npx tailwindcss -i ./src/tailwind.css -o ./public/build/bundle.css && csso ./public/build/bundle.css --output ./public/build/bundle.css"
+    "start": "node -C development esbuild.mjs --bundle",
+    "build": "node -C production esbuild.mjs --bundle"
   },
   "devDependencies": {
     "@jgoz/esbuild-plugin-livereload": "latest",
     "@tsconfig/svelte": "latest",
-    "concurrently": "latest",
-    "csso-cli": "latest",
+    "@types/node": "latest",
     "esbuild": "latest",
+    "esbuild-plugin-tailwindcss": "latest",
     "esbuild-svelte": "latest",
-    "prettier": "latest",
-    "prettier-plugin-svelte": "latest",
+    "postcss": "latest",
     "svelte": "latest",
-    "svelte-check": "latest",
     "svelte-preprocess": "latest",
     "tailwindcss": "latest",
     "typescript": "latest"
+  },
+  "dependencies": {
   }
 }
