--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
   "include": ["src/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"],
   "compilerOptions": {
-    "target": "es6",
+    "target": "esnext",
+    "types": [
+          // "node",
+          "svelte"
+    ],
     "strict": true
-  }
+
+  },
 }
